# home4u-app

./: .env.example  README.md  package-lock.json  package.json  vercel.json
.claude/: launch.json
.github/workflows/: analyze-daily.yml  analyze-listings-batch.yml  backfill-canonical.yml  backfill-cluster.yml  bazaraki-backfill-phash.yml  bazaraki-daily.yml  bsc-daily.yml  crawler-health-check.yml  cre-daily.yml  dev-crawler-daily.yml  index-cy-daily.yml  mark-stale-daily.yml  notify-new-matches.yml  scam-daily.yml
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/chat/: page.tsx
app/dashboard/: page.tsx
app/datenschutz/: page.tsx
app/gesuche/: page.tsx
app/impressum/: page.tsx
app/listing-action/: page.tsx
app/listings/: sitemap.ts
app/llms.txt/: route.ts
app/matches/: page.tsx
app/scam-check/: page.tsx
app/stoebern/: page.tsx
bazaraki-crawler/: .env.example  .gitignore  README.md  pyproject.toml
bazaraki-crawler/src/: backfill_phash.py  config.py  crawler.py  dedup.py  main.py  supabase_writer.py
bazaraki-crawler/tests/: test_detail_extract.py  test_list_extract.py
bazaraki-crawler/tests/fixtures/: detail_6410836.html  list_p1_limassol_rent_apartments.html  list_p2_limassol_rent_apartments.html
bsc-crawler/: pyproject.toml
bsc-crawler/src/: dedup.py  detail.py  http_client.py  main.py  sitemap.py  writer.py
components/auth/: AuthMenu.tsx  SignInDialog.tsx  TelegramLoginButton.tsx
components/brand/: Logo.tsx
components/browse/: BrowseFavoriteButton.tsx  BrowseFilterBar.tsx
components/chat/: ChatView.tsx  MediaUploader.tsx  SophieDrawer.tsx
components/dashboard/: AdminJobsPanel.tsx  AnalyzeWithSophieButton.tsx  AvailabilityChips.tsx  DashboardViewTabs.tsx  DeleteBookmarkOverlay.tsx  DeleteRecordButton.tsx  (+18 more)
cre-crawler/: pyproject.toml
cre-crawler/src/: detail.py  main.py  sitemap.py  writer.py
dev-crawler/: .env.example  README.md  pyproject.toml
fb-crawler/: .env.example  .gitignore  README.md  pyproject.toml
fb-crawler/scripts/: bootstrap-mac-mini.sh  diag_all_links.py  diag_dom.py  diag_wrapper.py  refresh-fb-tabs.applescript  start-chrome.sh
fb-crawler/scripts/launchd/: ai.home4u.fb-chrome.plist  ai.home4u.fb-crawler.plist  ai.home4u.fb-refresh.plist  install.sh
fb-crawler/src/: cdp_attach.py  classify.py  config.py  dedup.py  extract.py  groups.json  main.py  parser.py  supabase_writer.py
fb-crawler/tests/: test_parser.py
index-crawler/: pyproject.toml
index-crawler/src/: contact.py  dedup.py  detail.py  main.py  sitemap.py  writer.py
lib/: anthropic.ts  embeddings.ts  openai.ts  regions.ts  session.ts
probes/: README.md  apits_probe.py  prian_probe.py
scripts/: analyze-listings-batch.ts  backfill-canonical.sql  backfill-cluster.ts  notify-new-matches.ts  run-backfill-canonical.ts  run-crawler-health-check.ts  run-mark-stale.ts  run-scam-batch.ts
supabase/: config.toml
(+255 files in other folders)
