[project]
name = "home4u-bsc-crawler"
version = "0.1.0"
description = "BuySellCyprus.com indexer (curl_cffi for Cloudflare-bypass)"
requires-python = ">=3.11"
dependencies = [
    "curl_cffi>=0.7,<1",
    "httpx>=0.28,<1",
    "python-dotenv>=1.0,<2",
    "tenacity>=9.0,<10",
    "imagehash>=4.3,<5",
    "Pillow>=10.4,<12",
]

[project.scripts]
crawl-bsc = "src.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"
